syntax = "proto3";

package hospital.v1;

option java_multiple_files = true;
option java_package = "avelios.hospital.grpc";

service HospitalService {
    rpc CreateHospital (CreateHospitalRequest)    returns (HospitalId);
    rpc UpdateHospital (UpdateHospitalRequest)    returns (Hospital);
    rpc DeleteHospital (HospitalId)               returns (DeleteHospitalResponse);
    rpc ListHospitals (ListHospitalsRequest)      returns (HospitalList);
    rpc ListPatientsOfHospital (HospitalId)       returns (PatientList);
    rpc RegisterPatient (RegisterPatientRequest)  returns (RegisterAck);
}

service PatientService {
    rpc CreatePatient (CreatePatientRequest)      returns (PatientId);
    rpc UpdatePatient (UpdatePatientRequest)      returns (Patient);
    rpc DeletePatient (PatientId)                 returns (DeletePatientResponse);
    rpc ListPatients (ListPatientsRequest)        returns (PatientList);
    rpc ListHospitalsOfPatient (PatientId)        returns (HospitalList);
}

enum Sex {
    SEX_UNSPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
    OTHER = 3;
}

message LocalDate {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message HospitalId {
    string id = 1;
}

message PatientId {
    string id = 1;
}

message Hospital {
    string id = 1;
    string name = 2;
}

message Patient {
    string id = 1;
    string name = 2;
    Sex sex = 3;
    LocalDate dob = 4;
}

message CreateHospitalRequest {
    string name = 1;
}

message UpdateHospitalRequest {
    string id = 1;
    string name = 2;
}

message CreatePatientRequest {
    string name = 1;
    Sex sex = 2;
    LocalDate dob = 3;
}

message UpdatePatientRequest {
    string id = 1;
    string name = 2;
    Sex sex = 3;
    LocalDate dob = 4;
}

message RegisterPatientRequest {
    string patient_id = 1;
    string hospital_id = 2;
}

message RegisterAck {
    bool registered = 1;
    string patient_id = 2;
    string hospital_id = 3;
}

message HospitalTuple {
    string id = 1;
    string name = 2;
}

message PatientTuple {
    string id = 1;
    string name = 2;
}

message HospitalList {
    repeated HospitalTuple hospitals = 1;
}

message PatientList {
    repeated PatientTuple patients = 1;
}

message ListHospitalsRequest {}

message ListPatientsRequest {}

message DeleteHospitalResponse {
    bool deleted = 1;
    string id = 2;
}

message DeletePatientResponse {
    bool deleted = 1;
    string id = 2;
}
